--- a/ok boston.ipynb
+++ b/ok boston.ipynb
@@ -64,7 +64,8 @@
    "outputs": [],
    "source": [
     "def gdG(data,lr,it):\n",
-    "    N,M=data.shape\n",
+    "    \n",
+    "#     N,M=data.shape\n",
     "#     m= np.array([ 0.1421931,  -0.20224249,  0.4213015,  1.52116432,  0.27332676,  0.432061,  0.42652382, -0.51106172,  0.68886394,  0.63482501,  0.33446055,  0.16083896, -0.56341388,  0.41466722])\n",
     "    m=np.arr\n",
     "    m=sgG(data,lr,m)\n",
